@@ -1,6 +1,9 @@
 Revision history for Test-LWP-UserAgent
 
 {{$NEXT}}
+          - fix t/10-request-args-network.t under EXTENDED_TESTING=1 where the
+            test URL was returning random content for each request and
+            therefore failing a comparison check
 
 0.033     2017-05-18 00:46:41Z
           - fix network tests that failed from 0.032, due to inadequate author
